Add prettier and aws sdk v3
