# openapi-spec.json
@@ -1,291 +1,275 @@
 {
-    "openapi": "3.1.0",
-    "info": {
-        "title": "GoPal API Model",
-        "version": "2024-05-01",
-        "description": "Provides GoPal API Model"
-    },
-    "paths": {
-        "/v1/get-itinerary": {
-            "post": {
-                "description": "This API returns an AI generated trip planning from input",
-                "operationId": "GetItinerary",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/GetItineraryRequestContent"
-                            }
-                        }
-                    },
-                    "required": true
-                },
-                "responses": {
-                    "200": {
-                        "description": "GetItinerary 200 response",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/GetItineraryResponseContent"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "NotFoundException 404 response",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/NotFoundExceptionResponseContent"
-                                }
-                            }
-                        }
-                    },
-                    "501": {
-                        "description": "TerminalException 501 response",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/TerminalExceptionResponseContent"
-                                }
-                            }
-                        }
-                    }
-                }
+  "openapi": "3.1.0",
+  "info": {
+    "title": "GoPal API Model",
+    "version": "2024-05-01",
+    "description": "Provides GoPal API Model"
+  },
+  "paths": {
+    "/v1/get-itinerary": {
+      "post": {
+        "description": "This API returns an AI generated trip planning from input",
+        "operationId": "GetItinerary",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/GetItineraryRequestContent"
+              }
             }
+          },
+          "required": true
         },
-        "/v1/search-destination": {
-            "get": {
-                "description": "This is to return search destination",
-                "operationId": "SearchDestination",
-                "parameters": [
-                    {
-                        "name": "query",
-                        "in": "query",
-                        "description": "Names of locations, cities, districts, places, countries, counties etc.",
-                        "schema": {
-                            "type": "string",
-                            "description": "Names of locations, cities, districts, places, countries, counties etc."
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "SearchDestination 200 response",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/SearchDestinationResponseContent"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "NotFoundException 404 response",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/NotFoundExceptionResponseContent"
-                                }
-                            }
-                        }
-                    },
-                    "501": {
-                        "description": "TerminalException 501 response",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/TerminalExceptionResponseContent"
-                                }
-                            }
-                        }
-                    }
+        "responses": {
+          "200": {
+            "description": "GetItinerary 200 response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetItineraryResponseContent"
                 }
+              }
             }
+          },
+          "404": {
+            "description": "NotFoundException 404 response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFoundExceptionResponseContent"
+                }
+              }
+            }
+          },
+          "501": {
+            "description": "TerminalException 501 response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TerminalExceptionResponseContent"
+                }
+              }
+            }
+          }
         }
+      }
     },
-    "components": {
-        "schemas": {
-            "Activity": {
-                "type": "object",
-                "properties": {
-                    "activityName": {
-                        "type": "string"
-                    },
-                    "location": {
-                        "type": "string"
-                    },
-                    "description": {
-                        "type": "string"
-                    },
-                    "locationImageUrl": {
-                        "type": "string"
-                    }
-                },
-                "required": [
-                    "activityName",
-                    "description",
-                    "location"
-                ]
-            },
-            "Day": {
-                "type": "object",
-                "properties": {
-                    "dayNumber": {
-                        "type": "number"
-                    },
-                    "activities": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/Activity"
-                        }
-                    }
-                },
-                "required": [
-                    "activities",
-                    "dayNumber"
-                ]
-            },
-            "Destination": {
-                "type": "object",
-                "properties": {
-                    "name": {
-                        "type": "string"
-                    },
-                    "destId": {
-                        "type": "string"
-                    },
-                    "destType": {
-                        "type": "string"
-                    },
-                    "label": {
-                        "type": "string"
-                    },
-                    "country": {
-                        "type": "string"
-                    },
-                    "imageUrl": {
-                        "type": "string"
-                    },
-                    "region": {
-                        "type": "string"
-                    },
-                    "cityName": {
-                        "type": "string"
-                    }
-                },
-                "required": [
-                    "country",
-                    "destId",
-                    "destType",
-                    "imageUrl",
-                    "label",
-                    "name"
-                ]
-            },
-            "GetItineraryRequestContent": {
-                "type": "object",
-                "properties": {
-                    "destination": {
-                        "$ref": "#/components/schemas/Destination"
-                    },
-                    "startDate": {
-                        "type": "string",
-                        "pattern": "^[0-9]{4}-[0-9]{2}-[0-9]{2}$"
-                    },
-                    "endDate": {
-                        "type": "string",
-                        "pattern": "^[0-9]{4}-[0-9]{2}-[0-9]{2}$"
-                    },
-                    "numOfPeople": {
-                        "type": "number"
-                    }
-                },
-                "required": [
-                    "destination",
-                    "endDate",
-                    "numOfPeople",
-                    "startDate"
-                ]
-            },
-            "GetItineraryResponseContent": {
-                "type": "object",
-                "properties": {
-                    "placesToStay": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/PlaceToStay"
-                        }
-                    },
-                    "planningDays": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/Day"
-                        }
-                    }
-                },
-                "required": [
-                    "planningDays"
-                ]
-            },
-            "NotFoundExceptionResponseContent": {
-                "type": "object",
-                "description": "This exception is thrown when a requested resource does not exist.",
-                "properties": {
-                    "message": {
-                        "type": "string"
-                    }
-                }
-            },
-            "PlaceToStay": {
-                "type": "object",
-                "properties": {
-                    "name": {
-                        "type": "string"
-                    },
-                    "reviewScore": {
-                        "type": "number",
-                        "maximum": 10,
-                        "minimum": 1,
-                        "format": "float"
-                    },
-                    "reviewCount": {
-                        "type": "number"
-                    },
-                    "suggestedPrice": {
-                        "type": "number"
-                    },
-                    "currency": {
-                        "type": "string"
-                    },
-                    "photoUrl": {
-                        "type": "string"
-                    }
-                },
-                "required": [
-                    "name"
-                ]
-            },
-            "SearchDestinationResponseContent": {
-                "type": "object",
-                "properties": {
-                    "destinations": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/Destination"
-                        }
-                    }
-                }
-            },
-            "TerminalExceptionResponseContent": {
-                "type": "object",
-                "description": "This exception is thrown when a dependency call has failed or an internal error occurs.",
-                "properties": {
-                    "message": {
-                        "type": "string"
-                    }
-                }
+    "/v1/search-destination": {
+      "get": {
+        "description": "This is to return search destination",
+        "operationId": "SearchDestination",
+        "parameters": [
+          {
+            "name": "query",
+            "in": "query",
+            "description": "Names of locations, cities, districts, places, countries, counties etc.",
+            "schema": {
+              "type": "string",
+              "description": "Names of locations, cities, districts, places, countries, counties etc."
             }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "SearchDestination 200 response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SearchDestinationResponseContent"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "NotFoundException 404 response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFoundExceptionResponseContent"
+                }
+              }
+            }
+          },
+          "501": {
+            "description": "TerminalException 501 response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TerminalExceptionResponseContent"
+                }
+              }
+            }
+          }
         }
+      }
     }
+  },
+  "components": {
+    "schemas": {
+      "Activity": {
+        "type": "object",
+        "properties": {
+          "activityName": {
+            "type": "string"
+          },
+          "location": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "locationImageUrl": {
+            "type": "string"
+          }
+        },
+        "required": ["activityName", "description", "location"]
+      },
+      "Day": {
+        "type": "object",
+        "properties": {
+          "dayNumber": {
+            "type": "number"
+          },
+          "activities": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Activity"
+            }
+          }
+        },
+        "required": ["activities", "dayNumber"]
+      },
+      "Destination": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "destId": {
+            "type": "string"
+          },
+          "destType": {
+            "type": "string"
+          },
+          "label": {
+            "type": "string"
+          },
+          "country": {
+            "type": "string"
+          },
+          "imageUrl": {
+            "type": "string"
+          },
+          "region": {
+            "type": "string"
+          },
+          "cityName": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "country",
+          "destId",
+          "destType",
+          "imageUrl",
+          "label",
+          "name"
+        ]
+      },
+      "GetItineraryRequestContent": {
+        "type": "object",
+        "properties": {
+          "destination": {
+            "$ref": "#/components/schemas/Destination"
+          },
+          "startDate": {
+            "type": "string",
+            "pattern": "^[0-9]{4}-[0-9]{2}-[0-9]{2}$"
+          },
+          "endDate": {
+            "type": "string",
+            "pattern": "^[0-9]{4}-[0-9]{2}-[0-9]{2}$"
+          },
+          "numOfPeople": {
+            "type": "number"
+          }
+        },
+        "required": ["destination", "endDate", "numOfPeople", "startDate"]
+      },
+      "GetItineraryResponseContent": {
+        "type": "object",
+        "properties": {
+          "placesToStay": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/PlaceToStay"
+            }
+          },
+          "planningDays": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Day"
+            }
+          }
+        },
+        "required": ["planningDays"]
+      },
+      "NotFoundExceptionResponseContent": {
+        "type": "object",
+        "description": "This exception is thrown when a requested resource does not exist.",
+        "properties": {
+          "message": {
+            "type": "string"
+          }
+        }
+      },
+      "PlaceToStay": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "reviewScore": {
+            "type": "number",
+            "maximum": 10,
+            "minimum": 1,
+            "format": "float"
+          },
+          "reviewCount": {
+            "type": "number"
+          },
+          "suggestedPrice": {
+            "type": "number"
+          },
+          "currency": {
+            "type": "string"
+          },
+          "photoUrl": {
+            "type": "string"
+          }
+        },
+        "required": ["name"]
+      },
+      "SearchDestinationResponseContent": {
+        "type": "object",
+        "properties": {
+          "destinations": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Destination"
+            }
+          }
+        }
+      },
+      "TerminalExceptionResponseContent": {
+        "type": "object",
+        "description": "This exception is thrown when a dependency call has failed or an internal error occurs.",
+        "properties": {
+          "message": {
+            "type": "string"
+          }
+        }
+      }
+    }
+  }
 }
