# src/processors/models/destinations.ts
@@ -3,16 +3,16 @@ export interface SearchDestinationsInput {
 }
 
 export interface SearchDestinationsOutput {
-  destinations: Destination[];
+  destinations: Destination[]
 }
 
 export interface Destination {
-  destId: string;
-  destType: string;
-  cityName: string;
-  label: string;
-  region: string;
-  name: string;
-  country: string;
-  imageUrl: string;
+  destId: string
+  destType: string
+  cityName: string
+  label: string
+  region: string
+  name: string
+  country: string
+  imageUrl: string
 }
