# src/processors/models/hotels.ts
@@ -1,24 +1,23 @@
-
 export interface SearchDestinationHotelsInput {
-  destId: string,
-  searchType: string,
-  startDate: string;
-  endDate: string;
-  numOfPeople: string;
+  destId: string
+  searchType: string
+  startDate: string
+  endDate: string
+  numOfPeople: string
 }
 
 export interface SearchDestinationHotelsOutput {
-  hotels: Hotel[];
+  hotels: Hotel[]
 }
 
 export interface Hotel {
-  name: string;
-  reviewCount: number;
-  reviewScore: number;
-  countryCode: string;
+  name: string
+  reviewCount: number
+  reviewScore: number
+  countryCode: string
   price: {
-    currency: string;
-    value: number;
-  };
-  photoUrls: string[];
+    currency: string
+    value: number
+  }
+  photoUrls: string[]
 }
